# soundworm

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
config/scripts/: routing.rhai
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: link.rs  list.rs  metrics.rs  mod.rs  rules.rs  script.rs  shutdown.rs  snapshot.rs  volume.rs  watch.rs
crates/core/src/: backend.rs  error.rs  event.rs  node.rs
crates/coreaudio-backend/: Cargo.toml
crates/coreaudio-backend/src/: backend.rs  lib.rs  macos.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc_server.rs  main.rs  script_watch.rs  state.rs
crates/graph/src/: lib.rs  mock.rs
crates/graph/tests/: soak.rs
crates/ipc/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  metrics.rs  prom.rs  xrun.rs
crates/pipewire-backend/src/: lib.rs
crates/policy/src/: rules.rs
crates/rhai-engine/src/: lib.rs
crates/ui/: README.md  tauri.conf.json
crates/ui/frontend/: package.json  pnpm-lock.yaml
crates/ui/frontend/src/: App.svelte  swd.js
crates/ui/src/: main.rs
crates/wasapi-backend/: Cargo.toml
crates/wasapi-backend/src/: lib.rs  win.rs
docs/: IPC.md  index.html
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cli.md  install.md  introduction.md  rules.md  scripting.md  troubleshooting.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: rhai_script.rs  rules_toml.rs
