[package]
name    = "soundworm-observability"
version = "0.1.0"
edition = "2021"

[features]
default    = []
prometheus = []

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
hdrhistogram   = { workspace = true }
