[package]
name    = "soundworm-wasapi"
version = "0.1.0"
edition = "2021"

[dependencies]
soundworm-core = { path = "../core" }
async-trait    = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Media_Audio", "Win32_System_Com"] }
