[package]
name    = "soundworm-wasapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASAPI backend for soundworm (Windows)."

[dependencies]
soundworm-core = { path = "../core" }
async-trait    = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# windows-core is a direct dep so the #[interface] / #[implement] macros'
# absolute ::windows_core paths resolve under the umbrella windows crate.
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
] }
